# kokoro-coreml

./: .gitignore  LICENSE  README.md  benchmark.py  convert.py  cspell.json  dump_benchmark_data.py  pyproject.toml
iOSDemo/iOSDemo/: AudioPlayer.swift  BenchmarkData.swift  BenchmarkView.swift  ContentView.swift  KokoroEngine.swift  MLHelpers.swift  iOSDemoApp.swift
iOSDemo/iOSDemo.xcodeproj/: project.pbxproj
iOSDemo/iOSDemo/Resources/: benchmark_data.json  vocab.json
iOSDemo/iOSDemoTests/: iOSDemoTests.swift
iOSDemo/iOSDemoUITests/: iOSDemoUITests.swift  iOSDemoUITestsLaunchTests.swift
