[project]
name = "kokoro-coreml"
version = "0.1.0"
description = "Kokoro TTS → CoreML conversion (fp16+int8pal preset, 7 mlpackages for iOS Swift app)"
requires-python = ">=3.10,<3.14"
dependencies = [
    "kokoro>=0.9.4",
    "coremltools>=8.0",
    "numpy",
    "scikit-learn",
    "scipy",
    "soundfile",
    "torch",
]
